Fix issues on Firefox 133 #165 #166  * Firefox 133 added window controls to the nav-bar, which also added    titlebar-spacers which needed the scope limited to TabsToolbar.  * Firefox 133 also changed the urlbar popup width calculation.

--- a/chrome/toolbar/urlbar.css
+++ b/chrome/toolbar/urlbar.css
@@ -15,6 +15,7 @@
   --uc-urlbar-inline-padding: 5px;
   --uc-urlbar-shadow: 0 0 4px rgb(0 0 0 / .1);
   --urlbarView-rich-suggestion-default-icon-size: 32px !important;
+  --uc-urlbar-open-border-radius: 8px !important;
 
   /* urlbar height */
   & #urlbar-container {
@@ -48,7 +49,7 @@
 
   /* Appearance when the URL bar is expanded. */
   #urlbar[open] & {
-    border-radius: 8px !important;
+    border-radius: var(--uc-urlbar-open-border-radius) !important;
     border-color: transparent !important;
     box-shadow: 0 10px 16px rgb(0 0 0 / 0.18), 0 3px 5px rgb(0 0 0 / 0.33) !important;
     outline: 0.5px solid var(--arrowpanel-border-color) !important;
@@ -108,8 +109,17 @@
 
 /* Keep URL bar in place when expanding. */
 #urlbar[breakout][breakout-extend] {
-  left: 0 !important;
-  width: 100% !important;
+  /* Firefox < v133 */
+  &:not([style*="--urlbar-width"]) {
+    left: 0 !important;
+    width: 100% !important;
+  }
+
+  /* Firefox >= v133 */
+  &[style*="--urlbar-width"] {
+    margin-left: 0 !important;
+    width: var(--urlbar-width) !important;
+  }
 }
 
 /* Search engine selector */
@@ -180,7 +190,7 @@
 }
 
 /* Hide tracking protection button when not hovering over URL bar. */
-#urlbar-container:not(:hover) #tracking-protection-icon-container:not([open]) {
+.browser-toolbar:not(:hover) #tracking-protection-icon-container:not([open]) {
   visibility: collapse !important;
 }
 
